Экспортировал графику, подключил стили + nomalize. Разметил первый секшн

--- a/index.html
+++ b/index.html
@@ -3,77 +3,81 @@
 <head>
    <meta charset="UTF-8">
    <title>БИБОСС партнерская программа</title>
+   <link rel="stylesheet" href="css/normalize.css">
+   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+  <div class="container">
    <header>
-     <a href="#"><img src="" alt="Логотип БИБОСС"></a>
+     <a class="main-logo" href="#"><img src="img/main-logo.png" width="127px" height="22px" alt="Логотип БИБОСС"></a>
    </header>
 
-  <main>
-    <section>
-      <h1>Поставь ссылку на БИБОСС</h1>
-      <p>Заработай баллы!</p>
-    </section>
+    <main>
+      <section class="slogan">
+        <h1>Поставь ссылку на БИБОСС</h1>
+        <p>Заработай баллы!</p>
+      </section>
 
-    <section>
-      <h2 class="visually-hidden">Как это работает</h2>
-      <h3>БИБОСС даёт возможность получить бесплатные баллы – нужно лишь разместить на сайте компании любую из ссылок:</h3>
-      <ul>
-        <li>Текстовая ссылка «Франшиза [Название] на БИБОСС»</li>
-        <li>Текстовая ссылка «Наша франшиза на БИБОСС»</li>
-        <li>Кнопка “Нравится франшиза” + счетчик популярности</li>
-      </ul>
-    </section>
+      <section>
+        <h2 class="visually-hidden">Как это работает</h2>
+        <h3>БИБОСС даёт возможность получить бесплатные баллы – нужно лишь разместить на сайте компании любую из ссылок:</h3>
+        <ul>
+          <li>Текстовая ссылка «Франшиза [Название] на БИБОСС»</li>
+          <li>Текстовая ссылка «Наша франшиза на БИБОСС»</li>
+          <li>Кнопка “Нравится франшиза” + счетчик популярности</li>
+        </ul>
+      </section>
 
-    <section>
-      <h2>Зачем нужны баллы?</h2>
-      <p>Больше баллов — выше позиция в выдаче категории</p>
-    </section>
+      <section>
+        <h2>Зачем нужны баллы?</h2>
+        <p>Больше баллов — выше позиция в выдаче категории</p>
+      </section>
 
-    <section>
-      <div class="index-columns">
-        <section>
-          <h2>Правила размещения ссылки</h2>
-          <ul>
-            <li>Ссылка должна быть индексируемой (без тегов <noindex> и <nofollow>)</li>
-            <li>Ссылка должна быть читаемой, не скрытой от глаз посетителя сайта</li>
-            <li>Ссылка должна быть размещена на странице сайта, посвящённой франчайзингу</li>
-            <li>При размещении ссылок на другие порталы о франчайзинге – баллы обнуляются</li>
-          </ul>
-        </section>
-        <section>
-          <h2>Стоимость ссылки</h2>
-          <dl>
-            <dt>200 баллов</dt>
-            <dd>ТиЦ Вашего сайта от 10</dd>
-            <dt>50 баллов</dt>
-            <dd>ТиЦ Вашего сайта от 0 до 10</dd>
-          </dl>
-        </section>
-      </div>
-    </section>
+      <section>
+        <div class="index-columns">
+          <section>
+            <h2>Правила размещения ссылки</h2>
+            <ul>
+              <li>Ссылка должна быть индексируемой (без тегов <noindex> и <nofollow>)</li>
+              <li>Ссылка должна быть читаемой, не скрытой от глаз посетителя сайта</li>
+              <li>Ссылка должна быть размещена на странице сайта, посвящённой франчайзингу</li>
+              <li>При размещении ссылок на другие порталы о франчайзинге – баллы обнуляются</li>
+            </ul>
+          </section>
+          <section>
+            <h2>Стоимость ссылки</h2>
+            <dl>
+              <dt>200 баллов</dt>
+              <dd>ТиЦ Вашего сайта от 10</dd>
+              <dt>50 баллов</dt>
+              <dd>ТиЦ Вашего сайта от 0 до 10</dd>
+            </dl>
+          </section>
+        </div>
+      </section>
 
-    <section class="form">
-      <h2>Получить ссылку</h2>
-      <form class="partner" action="">
-        <label for="partner-name">Ваше имя</label>
-        <input id="partner-name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
-        <label for="partner-phone">Номер телефона</label>
-        <input id="partner-phone" type="tel" name="name" placeholder="Для начисления баллов и связи с Вами">
-        <label for="partner-?">Название франшизы</label>
-        <input id="partner-?" type="text" name="name" placeholder="Например, Subway">
-      </form>
-    </section>
+      <section class="form">
+        <h2>Получить ссылку</h2>
+        <form class="partner" action="">
+          <label for="partner-name">Ваше имя</label>
+          <input id="partner-name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+          <label for="partner-phone">Номер телефона</label>
+          <input id="partner-phone" type="tel" name="name" placeholder="Для начисления баллов и связи с Вами">
+          <label for="partner-?">Название франшизы</label>
+          <input id="partner-?" type="text" name="name" placeholder="Например, Subway">
+        </form>
+      </section>
 
-    <section>
-      <p>Это еще не все... Вы можете заработать дополнительные баллы, если разместите на своём сайте новость, интервью или статью БИБОСС о Вашей компании с активной ссылкой! 50 баллов за активную ссылку на новость!</p>
-    </section>
-    
-  </main>
+      <section>
+        <p>Это еще не все... Вы можете заработать дополнительные баллы, если разместите на своём сайте новость, интервью или статью БИБОСС о Вашей компании с активной ссылкой! 50 баллов за активную ссылку на новость!</p>
+      </section>
+      
+    </main>
 
-  <footer>
-    <a href="#"><img src="" alt="Иконка БИБОСС"></a>
-  </footer>
-
+    <footer>
+      <a href="#"><img src="" alt="Иконка БИБОСС"></a>
+    </footer>
+  </div>
 </body>
 </html>
