Разметил блок с колонками и форму

--- a/index.html
+++ b/index.html
@@ -38,40 +38,45 @@
           <p>Больше баллов — выше позиция в выдаче категории</p>
         </section>
 
+        <div class="index-columns box">
           <section>
-            <div class="index-columns">
-              <section>
-                <h2>Правила размещения ссылки</h2>
-                <ul>
-                  <li>Ссылка должна быть индексируемой (без тегов <noindex> и <nofollow>) </li>
-                  <li>Ссылка должна быть читаемой, не скрытой от глаз посетителя сайта</li>
-                  <li>Ссылка должна быть размещена на странице сайта, посвящённой франчайзингу</li>
-                  <li>При размещении ссылок на другие порталы о франчайзинге – баллы обнуляются</li>
-                </ul>
-              </section>
-              <section>
-                <h2>Стоимость ссылки</h2>
-                <dl>
-                  <dt>200 баллов</dt>
-                  <dd>ТиЦ Вашего сайта от 10</dd>
-                  <dt>50 баллов</dt>
-                  <dd>ТиЦ Вашего сайта от 0 до 10</dd>
-                </dl>
-              </section>
-            </div>
+            <h2>Правила размещения ссылки</h2>
+            <ul>
+              <li>Ссылка должна быть индексируемой (без тегов «noindex» и «nofollow»)</li>
+              <li>Ссылка должна быть читаемой, не скрытой от глаз посетителя сайта</li>
+              <li>Ссылка должна быть размещена на странице сайта, посвящённой франчайзингу</li>
+              <li>При размещении ссылок на другие порталы о франчайзинге – баллы обнуляются</li>
+            </ul>
           </section>
+          <section>
+            <h2>Стоимость ссылки</h2>
+            <dl>
+              <dt>200 баллов</dt>
+              <dd>ТиЦ Вашего сайта от 10</dd>
+              <dt>50 баллов</dt>
+              <dd>ТиЦ Вашего сайта от 0 до 10</dd>
+            </dl>
+          </section>
+        </div>
 
-          <section class="form">
-            <h2>Получить ссылку</h2>
-            <form class="partner" action="">
+        <section class="form box">
+          <h2>Получить ссылку</h2>
+          <form class="partner" action="">
+            <p>            
               <label for="partner-name">Ваше имя</label>
               <input id="partner-name" type="text" name="name" placeholder="Представьтесь, пожалуйста">
+            </p>
+            <p>
               <label for="partner-phone">Номер телефона</label>
               <input id="partner-phone" type="tel" name="name" placeholder="Для начисления баллов и связи с Вами">
+            </p>
+            <p>
               <label for="partner-?">Название франшизы</label>
               <input id="partner-?" type="text" name="name" placeholder="Например, Subway">
-            </form>
-          </section>
+            </p>
+            <button class="button" type="submit">Получить ссылку</button>
+          </form>
+        </section>
 
           <section>
             <p>Это еще не все... Вы можете заработать дополнительные баллы, если разместите на своём сайте новость, интервью или статью БИБОСС о Вашей компании с активной ссылкой! 50 баллов за активную ссылку на новость!</p>
