--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <title>БИБОСС партнерская программа</title>
    <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="css/style.min.css">   
 </head>
 
 <body>  
