--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <title>БИБОСС партнерская программа</title>
    <link rel="stylesheet" href="css/normalize.css">
-   <link rel="stylesheet" href="css/style.min.css">   
+   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>  
@@ -98,18 +98,6 @@
       </div>    
     </footer>
 
-    <script>
-      var form = document.querySelector(".form");
-      var inv = form.querySelector(".tel-error");
-      var phone = form.querySelector("[name=phone]");
-
-      form.addEventListener("submit", function (evt) {
-        if (!phone.value) {
-          evt.preventDefault();
-          inv.classList.add("js-show");
-          }                            
-        });
-    </script>
-
+  <script src="js/script.min.js"></script>
 </body>
 </html>
